<resources>
    <string name="app_name">软装到家_Debug</string>
    <string name="str_sy">首页</string>
    <string name="str_pp">品牌</string>
    <string name="str_sp">商品</string>
    <string name="str_fa">方案</string>
    <string name="str_lbrz">拎包入住</string>
    <string name="str_wd">我的</string>
    <string name="str_hbdp">火爆单品</string>
    <string name="str_jdal">经典案例</string>
    <string name="str_gd">更多</string>
    <string name="str_qjalty">全景案例体验</string>
    <string name="str_ppzs">品牌展示</string>
    <string name="str_qb">全部</string>
    <string name="str_bkzq">爆款专区</string>
    <string name="str_ztpp">主推品牌</string>
    <string name="str_rzjj">软装家具</string>
    <string name="str_ppjj">品牌家具</string>
    <string name="str_ppxq">品牌详情</string>
    <string name="str_ztyz">展厅游走</string>
    <string name="str_spzs">商品展示</string>
    <string name="str_spxq">商品详情</string>
    <string name="str_ys">颜色：</string>
    <string name="str_gg">规格：</string>
    <string name="str_spxx">商品信息</string>
    <string name="str_gdfa">高端方案</string>
    <string name="str_qsrfamc">请输入方案名称</string>
    <string name="str_faxq">方案详情</string>
    <string name="str_dqkjxx">当前空间信息</string>
    <string name="str_hx">户型：</string>
    <string name="str_mj">面积：</string>
    <string name="str_fazj">方案总价：</string>
    <string name="str_sjsj">设计时间：</string>
    <string name="str_sjsxm">设计师姓名：</string>
    <string name="str_hx2">户型</string>
    <string name="str_ysyt">一室一厅</string>
    <string name="str_bj">编辑</string>
    <string name="str_jg">价格</string>
    <string name="str_cc">尺寸：</string>
    <string name="str_jrpzd">加入配置单</string>
    <string name="str_tjkh">添加客户</string>
    <string name="str_xggrzl">修改个人资料</string>
    <string name="str_xgmm">修改密码</string>
    <string name="str_tcdl">退出登录</string>
    <string name="str_wdsc">我的收藏</string>
    <string name="str_ckwdsc">查看我的收藏</string>
    <string name="str_wdfa">我的方案</string>
    <string name="str_ckwdfa">查看我的方案</string>
    <string name="str_wdkh">我的客户</string>
    <string name="str_ckwdkh">查看我的客户</string>
    <string name="str_wddps">我的店铺商</string>
    <string name="str_ckwddps">查看我的店铺商</string>
    <string name="str_xm">姓名</string>
    <string name="str_qsrxm">请输入姓名</string>
    <string name="str_sjh">手机号</string>
    <string name="str_qsrsjh">请输入手机号</string>
    <string name="str_dz">地址</string>
    <string name="str_qxzs">请选择省</string>
    <string name="str_qxzs2">请选择市</string>
    <string name="str_qxzq">请选择区/县</string>
    <string name="str_wyyd">我已阅读</string>
    <string name="str_yhxy">《用户协议》</string>
    <string name="str_qx">取消</string>
    <string name="str_tj">添加</string>
    <string name="str_jmm">旧密码</string>
    <string name="str_qsrjmm">请输入密码</string>
    <string name="str_xmm">新密码</string>
    <string name="str_qsrxmm">请输入新密码</string>
    <string name="str_qrmm">确认密码</string>
    <string name="str_tj2">提交</string>
    <string name="str_tj3"><u>提交</u></string>
    <string name="str_xgzl">修改资料</string>
    <string name="str_xgzl2"><u>修改资料</u></string>
    <string name="str_sctp">上传图片</string>
    <string name="str_bh">编号</string>
    <string name="str_tjr">添加人</string>
    <string name="str_khbz">客户标志</string>
    <string name="str_cz">操作</string>
    <string name="str_wj">文件</string>
    <string name="str_lywj"><u>详情</u></string>
    <string name="str_yjtj"><u>一键添加</u></string>
    <string name="str_lyypwj">录音音频文件</string>
    <string name="str_lysj">录音时间</string>
    <string name="str_lysc">录音时长</string>
    <string name="str_lx">类型</string>
    <string name="str_qx2">全选</string>
    <string name="str_sc">删除</string>
    <string name="str_sc2"><u>删除</u></string>
    <string name="str_gl">管理</string>
    <string name="str_dpmc">店铺名称</string>
    <string name="str_dpfzr">店铺负责人</string>
    <string name="str_czmm"><u>重置密码</u></string>
    <string name="str_tjdps">添加店铺商</string>
    <string name="str_yxkh">意向客户</string>
    <string name="str_tjfa">添加方案</string>
    <string name="str_fabt">方案标题</string>
    <string name="str_fmzp">封面照片</string>
    <string name="str_hxxz">户型选择</string>
    <string name="str_xqzp">详情照片</string>
    <string name="str_qxzhx">请选择户型</string>
    <string name="str_fgxz">风格选择</string>
    <string name="str_qxzfg">请选择风格</string>
    <string name="str_hxlx">户型类型</string>
    <string name="str_qxzhxlx">请选择户型类型</string>
    <string name="str_mj2">&#8195;&#8195;面积</string>
    <string name="str_vrurl">&#8195;VRURL</string>
    <string name="str_bc">保存</string>
    <string name="str_zh">账户</string>
    <string name="str_mm">密码</string>
    <string name="str_dl">登录</string>
    <string name="str_dlcg">登录成功</string>
    <string name="str_ytcdl">已退出登录</string>
    <string name="str_zpyz">自拍一张</string>
    <string name="str_syxc">使用相册</string>
    <string name="str_scsb">上传失败</string>
    <string name="str_bnscdt">不能上传gif动图</string>
    <string name="str_sqsb">授权失败</string>
    <string name="str_qr">确认</string>
    <string name="str_xxdz">详细地址</string>
    <string name="str_dhhm">电话号码</string>
    <string name="str_qsrdpsmc">请输入店铺商名称</string>
    <string name="str_qsrdpfzr">请输入店铺负责人</string>
    <string name="str_wdsjs">我的设计师</string>
    <string name="str_sjs">设计师</string>
    <string name="str_yykh">拥有客户</string>
    <string name="str_sssjs">搜索设计师</string>
    <string name="str_ckwdsjs">查看我的设计师</string>
    <string name="str_ckhy"><u>查看会员</u></string>
    <string name="str_qd2">确定</string>
    <string name="str_czmm2">重置密码</string>
    <string name="str_czcg">重置成功</string>
    <string name="str_khlx">客户类型</string>
    <string name="str_qxz">请选择</string>
    <string name="str_xgcg">修改成功</string>
    <string name="str_qsrhxlx">请输入户型类型</string>
    <string name="str_qxzfmzp">请上传封面照片</string>
    <string name="str_bccg">保存成功</string>
    <string name="str_czmmcg">重置密码成功</string>
    <string name="str_tjsjs">添加设计师</string>
    <string name="str_fash">方案审核</string>
    <string name="str_shwtg">审核未通过</string>
    <string name="str_bt">标题</string>
    <string name="str_fg">风格</string>
    <string name="str_mj3">面积（㎡）</string>
    <string name="str_cjsj">创建时间</string>
    <string name="str_shzt">审核状态</string>
    <string name="str_gxsh">个性生活</string>
    <string name="str_sccg">收藏成功</string>
    <string name="str_yqxsc">已取消收藏</string>
    <string name="str_zxbb">最新版本</string>
    <string name="str_shgx">稍后升级</string>
    <string name="str_ljgx">立即更新</string>
    <string name="str_az">安装</string>
    <string name="str_fxxbb">发现新版本</string>
    <string name="str_msgx">马上更新</string>
    <string name="str_yhzs">以后再说</string>
    <string name="str_tjcg">添加成功</string>
    <string name="str_qcxdl">请重新登录</string>
    <string name="str_qsrsywsjhm">请输入11位手机号码</string>
    <string name="str_tccg">退出成功</string>
    <string name="str_qxzkhxl">请选择客户类型</string>
    <string name="str_khxl">客户类型</string>
    <string name="str_hint">请先退出当前客户</string>
    <string name="str_sskh">搜索客户</string>
    <string name="str_shtg">审核通过</string>
    <string name="str_shbtg">审核不通过</string>
    <string name="str_zayc">再按一次退出程序</string>
    <string name="str_tjfl">添加分类</string>
    <string name="str_ktzj">客厅总价</string>
    <string name="str_ktzj2">客厅总价&#8195;¥0.0</string>
    <string name="str_hint1">全部房间共</string>
    <string name="str_hint2">全部房间共&#8195;¥0.0</string>
    <string name="str_bj2">布局</string>
    <string name="str_kg">&#8195;&#8195;</string>
    <string name="str_kg2">&#8195;</string>
    <string name="str_cz2">重置</string>
    <string name="str_wppkx">暂无品牌可选</string>
    <string name="str_wfpkx">暂无风格可选</string>
    <string name="str_hint10">请选择规格和颜色</string>
    <string name="zj">总价</string>
    <string name="qbfjg">全部房间共</string>
    <string name="str_hint3">请输入房间布局</string>
    <string name="str_qsmfx">请扫码分享</string>
    <string name="str_fx">分享</string>
    <string name="str_qsrxymj">请输入选用面积（㎡）</string>
    <string name="str_hint4">请先退出当前客户</string>
    <string name="str_hint5">确定要退出当前登录吗？</string>
    <string name="str_wdsp">我的商品</string>
    <string name="str_ckwdsp">查看我的商品</string>
    <string name="str_sssp">搜索商品</string>
    <string name="str_spmc">商品名称</string>
    <string name="str_spt">商品图</string>
    <string name="str_fl">分类</string>
    <string name="str_ggmc">规格名称</string>
    <string name="str_sxjzt">上下架状态</string>
    <string name="str_xzsp">新增商品</string>
    <string name="str_plsj">批量上架</string>
    <string name="str_plxj">批量下架</string>
    <string name="str_pltjsh">批量提交审核</string>
    <string name="str_xg"><u>修改</u></string>
    <string name="str_sj"><u>上架</u></string>
    <string name="str_xj"><u>下架</u></string>
    <string name="str_spbt">商品标题</string>
    <string name="str_hint6">例：双十二套餐巨献 90后家具 超级舒适单人躺椅</string>
    <string name="str_hint7">例：单人沙发</string>
    <string name="str_spfbt">商品副标题</string>
    <string name="str_spdw">商品单位</string>
    <string name="str_zhang">张</string>
    <string name="str_ge">个</string>
    <string name="str_zhan">盏</string>
    <string name="str_tao">套</string>
    <string name="str_jian">件</string>
    <string name="str_ssfl">所属分类</string>
    <string name="str_qxz2">-- 请选择 --</string>
    <string name="str_qt">其他</string>
    <string name="str_spgg">商品规格</string>
    <string name="str_xzgg">新增规格</string>
    <string name="str_spcsbc">商品参数补充</string>
    <string name="str_xz">新增</string>
    <string name="str_hint8">注：在左侧输入框输入参数类型名称，右侧输入框输入参数值\n例如：产品品牌：喜洋洋</string>
    <string name="str_plsc">批量删除</string>
    <string name="str_gggl"><u>规格管理</u></string>
    <string name="str_gxsj">更新时间</string>
    <string name="str_gg2">规格</string>
    <string name="str_ys2">颜色</string>
    <string name="str_yj">原价</string>
    <string name="str_xsj">销售价</string>
    <string name="str_ggt">规格图</string>
    <string name="str_hint9">图片为规格图，仅有一张</string>
    <string name="str_tjsp">添加商品</string>
    <string name="str_cslx">参数类型</string>
    <string name="str_csz">参数值</string>
    <string name="str_hint11">请输入商品标题</string>
    <string name="str_hint12">请输入商品副标题</string>
    <string name="str_hint13">请选择商品所属分类</string>
    <string name="str_hint14">请选择封面照片</string>
    <string name="str_hint15">请选择商品单位</string>
    <string name="str_hint16">请添加商品参数补充</string>
    <string name="str_qxzsp">请选择商品</string>
    <string name="str_hint17">请输入商品单位</string>
    <string name="str_qsrggmc">请输入规格名称</string>
    <string name="str_qsrgg">请输入规格</string>
    <string name="str_qsrys">请输入颜色</string>
    <string name="str_qsryj">请输入原价</string>
    <string name="str_qsrxsj">请输入销售价</string>
    <string name="str_qsrggt">请上传规格图</string>
    <string name="str_xgsp">修改商品</string>
    <string name="str_srdw">输入单位</string>
    <string name="str_hint21">审核通过的商品才能操作</string>
    <string name="str_screen">筛选</string>
    <string name="str_ppmc">品牌名称</string>
    <string name="str_zdj">最低价</string>
    <string name="str_zgj">最高价</string>
    <string name="str_sq">收起</string>

    <string name="app_id">5c134cc9</string>
    <string name="pref_key_translate">translate</string>
    
    <string name="input_num_character">1234567890</string>
</resources>
