<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_grap2"
            android:drawablePadding="@dimen/d10"
            android:drawableRight="@mipmap/ic_arrows_bottom_small"
            android:gravity="center"
            android:paddingLeft="@dimen/d20"
            android:paddingRight="@dimen/d20"
            android:text="@string/str_qb"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/d13" />

        <TextView
            android:id="@+id/tv_look"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@mipmap/ic_fash"
            android:drawablePadding="@dimen/d5"
            android:gravity="center"
            android:text="@string/str_fash"
            android:textColor="@color/color_E70052"
            android:textSize="@dimen/d13" />

        <TextView
            android:id="@+id/tv_plan"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@mipmap/ic_jia"
            android:drawablePadding="@dimen/d5"
            android:gravity="center"
            android:text="@string/str_tjfa"
            android:textColor="@color/color_E70052"
            android:textSize="@dimen/d13" />

    </LinearLayout>
</layout>