<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f8f8f8"
        android:gravity="center|top"
        android:orientation="vertical">

        <com.zhy.android.percent.support.PercentLinearLayout
            android:id="@+id/ll_hx"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center|left"
            android:orientation="horizontal"
            app:layout_heightPercent="6%h"
            app:layout_marginTopPercent="3%h"
            app:layout_widthPercent="76%w">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_hx2"
                android:textColor="@color/color_787878"
                app:layout_marginLeftPercent="5%w"
                app:layout_textSizePercent="40%h" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@mipmap/ic_hx_bottom"
                app:layout_heightPercent="40%h"
                app:layout_marginLeftPercent="2%w"
                app:layout_widthPercent="40%h" />

            <TextView
                android:id="@+id/tv_house_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_qxzhx"
                android:textColor="@color/color_333333"
                app:layout_marginLeftPercent="5%w"
                app:layout_textSizePercent="40%h" />
        </com.zhy.android.percent.support.PercentLinearLayout>

        <com.zhy.android.percent.support.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:gravity="center|left"
            app:layout_heightPercent="7.5%h"
            app:layout_marginBottomPercent="1.5%h"
            app:layout_marginTopPercent="3%h">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_bj2"
                android:textColor="@color/color_333333"
                app:layout_marginLeftPercent="3%w"
                app:layout_textSizePercent="35%h" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/color_eeeeee"
                app:layout_heightPercent="40%h"
                app:layout_marginLeftPercent="3%w"
                app:layout_marginRightPercent="3%w" />

            <com.junshan.pub.widget.PagerSlidingTabStrip
                android:id="@+id/tabs_bagin_left"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                app:JessonTextColorOff="@color/color_787878"
                app:JessonTextColorOn="@color/color_E70052"
                app:pstsDividerColor="@color/transparent"
                app:pstsIndicatorColor="@color/color_E70052"
                app:pstsIndicatorHeight="@dimen/d2"
                app:pstsShouldExpand="true"
                app:pstsUnderlineHeight="0dp" />

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/drawable_red"
                android:gravity="center"
                android:text="@string/str_bj"
                android:textColor="@color/white"
                app:layout_textSizePercent="35%h"
                app:layout_widthPercent="15%w" />

        </com.zhy.android.percent.support.PercentLinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_bagin_left"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </com.zhy.android.percent.support.PercentLinearLayout>
</layout>